name:                  haskell-dap
version:               0.0.2.0
synopsis:              haskell-dap is a GHCi having DAP interface.
description:           Please see README.md
homepage:              https://github.com/phoityne/haskell-dap
bug-reports:           https://github.com/phoityne/haskell-dap/issues
license:               BSD3
license-file:          LICENSE
author:                phoityne_hs
maintainer:            phoityne.hs@gmail.com
copyright:             2017-2018 phoityne_hs
category:              Development
build-type:            Simple
cabal-version:         >=1.10
extra-source-files:    README.md
                     , Changelog.md
                     , src-c-8.0/HsVersions.h
                     , src-c-8.0/PosixSource.h
                     , src-c-8.2/HsVersions.h
                     , src-c-8.2/PosixSource.h

executable haskell-dap
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
  hs-source-dirs:      app
  if impl(ghc >= 8.0.0) && impl(ghc < 8.1.0)
    hs-source-dirs:      app-ghc-8.0

  if impl(ghc >= 8.2.0) && impl(ghc < 8.3.0)
    hs-source-dirs:      app-ghc-8.2

  cpp-options:         -DGHCI
  cc-options:          -fPIC
  if impl(ghc >= 8.0.0) && impl(ghc < 8.1.0)
    include-dirs:        src-c-8.0/
    c-sources:           src-c-8.0/hschooks.c

  if impl(ghc >= 8.2.0) && impl(ghc < 8.3.0)
    include-dirs:        src-c-8.2/
    c-sources:           src-c-8.2/hschooks.c

  main-is:             Main.hs
  other-modules:       Paths_haskell_dap
                     , Haskell.DAP.GHCi.Constant
                     , Haskell.DAP.GHCi.Type
                     , Haskell.DAP.GHCi.Utility
                     , Haskell.DAP.GHCi.Command
                     , GHCMain
                     , GHCi.UI
                     , GHCi.UI.Info
                     , GHCi.UI.Monad
                     , GHCi.UI.Tags
  build-depends:       base
                     , ghc
                     , ghci
                     , ghc-paths
                     , transformers
                     , containers
                     , time
                     , directory
                     , haskeline
                     , array
                     , process
                     , ghc-boot
                     , filepath
                     , bytestring
                     , deepseq
                     , haskell-dap
  if os(windows)
    build-depends:
      Win32
  else
    build-depends:
      unix
    ghc-options:
      -dynamic


library
  hs-source-dirs:      src
  exposed-modules:     GHCi.DAP.IFData
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010


